--- a/tsconfig.es5.json
+++ b/tsconfig.es5.json
@@ -17,6 +17,10 @@
     "dist",
     "esm"
   ],
+  "angularCompilerOptions": {
+    "debug": false,
+    "skipMetadataEmit": false
+  },
   "compileOnSave": false,
   "buildOnSave": false,
   "atom": { "rewriteTsconfig": false }
