chore: Update for Angular 5

--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -10,7 +10,8 @@
     "noEmitHelpers": false,
     "lib": ["es6", "dom"],
     "outDir": "esm",
-    "rootDir": "src"
+    "rootDir": "src",
+    "moduleResolution": "node"
   },
   "exclude": [
     "node_modules",
