--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angularclass/idle-preload",
-  "version": "1.0.4",
+  "version": "2.0.1",
   "description": "Angular 2 Idle Preload for preloading async routes via @AngularClass",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -21,17 +21,17 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@angular/common": "2.2.3",
-    "@angular/compiler": "2.2.3",
-    "@angular/compiler-cli": "2.2.3",
-    "@angular/core": "2.2.3",
-    "@angular/platform-browser": "2.2.3",
-    "@angular/platform-browser-dynamic": "^2.2.3",
-    "@angular/router": "3.2.3",
+    "@angular/common": "5.0.1",
+    "@angular/compiler": "5.0.1",
+    "@angular/compiler-cli": "5.0.1",
+    "@angular/core": "5.0.1",
+    "@angular/platform-browser": "5.0.1",
+    "@angular/platform-browser-dynamic": "^5.0.1",
+    "@angular/router": "^5.0.1",
     "rimraf": "^2.5.4",
-    "rxjs": "5.0.0-beta.12",
-    "typescript": "~2.0.10",
-    "zone.js": "~0.6.26"
+    "rxjs": "5.5.2",
+    "typescript": "~2.4.2",
+    "zone.js": "~0.8.18"
   },
   "repository": {
     "type": "git",
