--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@angular/common": "5.0.1",
-    "@angular/compiler": "5.0.1",
-    "@angular/compiler-cli": "5.0.1",
-    "@angular/core": "5.0.1",
-    "@angular/platform-browser": "5.0.1",
-    "@angular/platform-browser-dynamic": "^5.0.1",
-    "@angular/router": "^5.0.1",
+    "@angular/common": "~5.0.1",
+    "@angular/compiler": "~5.0.1",
+    "@angular/compiler-cli": "~5.0.1",
+    "@angular/core": "~5.0.1",
+    "@angular/platform-browser": "~5.0.1",
+    "@angular/platform-browser-dynamic": "~5.0.1",
+    "@angular/router": "~5.0.1",
     "rimraf": "^2.5.4",
     "rxjs": "5.5.2",
     "typescript": "~2.4.2",
